--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -293,7 +293,7 @@ jobs:
           uv run pyright
 
       - name: Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        run: npm install -g wasm-pack
 
       - name: Build minijinja WASM bindings
         working-directory: ui/app/utils/minijinja
