--- a/.github/workflows/build-gateway-container.yml
+++ b/.github/workflows/build-gateway-container.yml
@@ -20,8 +20,17 @@ jobs:
       - name: Save `gateway` container
         run: docker save tensorzero/gateway:sha-${{ github.sha }} > gateway-container.tar
 
-      - name: Upload `gateway` container as an artifact
+      - name: Upload `gateway` container as an artifact to Namespace
         uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
+        with:
+          name: build-gateway-container
+          path: gateway-container.tar
+          retention-days: 1
+          if-no-files-found: error
+          overwrite: false
+
+      - name: Upload `gateway` container as an artifact to Github
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: build-gateway-container
           path: gateway-container.tar
