Fix wasm-pack installation (#2912)
* Fix wasm-pack installation

We're getting a 404 trying to download the installation script,
so let's try from NPM

* Try installing npm

* Exclude ui/docker-compose.yml

* Fix other link

* Bump timeout

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -28,7 +28,7 @@ jobs:
       # Permission to fetch GitHub OIDC token authentication
       id-token: write
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 25
 
     steps:
       - name: Set DNS
@@ -293,7 +293,7 @@ jobs:
           uv run pyright
 
       - name: Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+        run: npm install -g wasm-pack
 
       - name: Build minijinja WASM bindings
         working-directory: ui/app/utils/minijinja
