--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -56,7 +56,8 @@ FROM rust:latest AS minijinja-build-env
 COPY . /build
 
 WORKDIR /build/ui/app/utils/minijinja
-RUN curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+RUN apt-get update && apt-get install -y nodejs npm
+RUN npm install -g wasm-pack
 RUN wasm-pack build --features console_error_panic_hook
 
 # ========== tensorzero-node-build-env ==========
