--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -234,10 +234,9 @@ jobs:
           # Environment variables only used by the gateway container
           # We deliberately leave these unset when starting the UI container, to ensure
           # that it doesn't depend on them being set
-          # TODO - set these back to dummy credentials once we fix regenerating the model inference cache
-          echo "FIREWORKS_ACCOUNT_ID=${{ secrets.FIREWORKS_ACCOUNT_ID }}" >> fixtures/.env-gateway
-          echo "FIREWORKS_API_KEY=${{ secrets.FIREWORKS_API_KEY }}" >> fixtures/.env-gateway
-          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> fixtures/.env-gateway
+          echo "FIREWORKS_ACCOUNT_ID=unused_account_id" >> fixtures/.env-gateway
+          echo "FIREWORKS_API_KEY=unused_fireworks" >> fixtures/.env-gateway
+          echo "OPENAI_API_KEY=unused_openai" >> fixtures/.env-gateway
           echo "S3_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> fixtures/.env-gateway
           echo "S3_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> fixtures/.env-gateway
           docker compose -f fixtures/docker-compose.e2e.yml up --no-build -d
