--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,9 +74,10 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
-manual_string_new = "deny"
 if_not_else = "deny"
+manual_string_new = "deny"
 match_bool = "deny"
+needless_raw_string_hashes = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
