--- a/.github/workflows/batch-test.yml
+++ b/.github/workflows/batch-test.yml
@@ -17,6 +17,7 @@ env:
   GOOGLE_AI_STUDIO_API_KEY: ${{ secrets.GOOGLE_AI_STUDIO_API_KEY }}
   GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
   HYPERBOLIC_API_KEY: ${{secrets.HYPERBOLIC_API_KEY}}
+  LLAMA_API_KEY: ${{secrets.LLAMA_API_KEY}}
   MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
   OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
