--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -26,6 +26,7 @@ env:
   GOOGLE_AI_STUDIO_API_KEY: ${{ secrets.GOOGLE_AI_STUDIO_API_KEY }}
   GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
   HYPERBOLIC_API_KEY: ${{secrets.HYPERBOLIC_API_KEY}}
+  LLAMA_API_KEY: ${{secrets.LLAMA_API_KEY}}
   MODAL_KEY: ${{ secrets.MODAL_KEY }}
   MODAL_SECRET: ${{ secrets.MODAL_SECRET }}
   MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
