feat: Add TLS support to Helm chart ingresses
- Add TLS configuration support to both gateway and UI ingress templates
- Add className and annotations configuration options to ingress values
- Update Chart.yaml version to 0.0.1 and appVersion to 2025.7.4
- Include example TLS configuration in values.yaml with cert-manager annotations
- Enable HTTPS termination at ingress level for production deployments

This allows users to configure TLS directly through Helm values without
requiring manual ingress resources.

--- a/examples/production-deployment-k8s-helm/templates/ui-ingress.yaml
+++ b/examples/production-deployment-k8s-helm/templates/ui-ingress.yaml
@@ -16,6 +16,18 @@ spec:
   {{- if .Values.ui.ingress.className }}
   ingressClassName: {{ .Values.ui.ingress.className }}
   {{- end }}
+  {{- if .Values.ui.ingress.tls }}
+  tls:
+    {{- range .Values.ui.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      {{- if .secretName }}
+      secretName: {{ .secretName }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
   rules:
     {{- range .Values.ui.ingress.hosts }}
     - host: {{ .host | quote }}
