--- a/examples/production-deployment-k8s-helm/templates/ingress.yaml
+++ b/examples/production-deployment-k8s-helm/templates/ingress.yaml
@@ -15,6 +15,18 @@ spec:
   {{- if .Values.gateway.ingress.className }}
   ingressClassName: {{ .Values.gateway.ingress.className }}
   {{- end }}
+  {{- if .Values.gateway.ingress.tls }}
+  tls:
+    {{- range .Values.gateway.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      {{- if .secretName }}
+      secretName: {{ .secretName }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
   rules:
     {{- range .Values.gateway.ingress.hosts }}
     - host: {{ .host | quote }}
