--- a/ci/dummy-env-file.env
+++ b/ci/dummy-env-file.env
@@ -13,6 +13,7 @@ export GOOGLE_AI_STUDIO_API_KEY="dummy_google_key"
 export GROQ_API_KEY="dummy_groq_key"
 export HYPERBOLIC_API_KEY="dummy_hyperbolic_key"
 export MISTRAL_API_KEY="dummy_mistral_key"
+export NVIDIA_API_KEY="dummy_nvidia_key"
 export OPENAI_API_KEY="dummy_openai_key"
 export OPENROUTER_API_KEY="dummy_openrouter_key"
 export SGLANG_API_KEY="dummy_sglang_key"
