--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "httpx>=0.27.0",
+    "ipykernel>=6.30.0",
+    "markdownify>=1.1.0",
     "typing-extensions>=4.12.2",
     "uuid-utils>=0.9.0",
+    "wikipedia>=1.4.0",
 ]
 authors = [
     { name = "Viraj Mehta", email = "viraj@tensorzero.com" },
