Add NVIDIA NIM to Codex example
- Add NVIDIA NIM to the list of supported model providers
- Include link to NVIDIA NIM documentation
- Add NVIDIA_API_KEY to .env.example file

Include NVIDIA NIM in supported providers list and environment variables

--- a/examples/production-deployment/.env.example
+++ b/examples/production-deployment/.env.example
@@ -30,6 +30,7 @@ TENSORZERO_CLICKHOUSE_URL="http[s]://[username]:[password]@[hostname]:[port]/[da
 # GOOGLE_AI_STUDIO_API_KEY=example
 # HYPERBOLIC_API_KEY=example
 # MISTRAL_API_KEY=example
+# NVIDIA_API_KEY=example
 # OPENAI_API_KEY=example
 # TGI_API_KEY=example
 # TOGETHER_API_KEY=example
