--- a/ui/fixtures/docker-compose.ui.yml
+++ b/ui/fixtures/docker-compose.ui.yml
@@ -11,6 +11,7 @@ services:
       - OPENAI_BASE_URL
       - FIREWORKS_BASE_URL
       - FIREWORKS_ACCOUNT_ID
+      - TENSORZERO_FORCE_CACHE_ON
     volumes:
       - ./config:/app/config:ro
     env_file:
