--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ trivially_copy_pass_by_ref = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
 unreachable = "deny"
+unused_self = "deny"
 unwrap_used = "deny"
 
 [profile.performance]
