--- a/examples/guides/providers/nvidia_nim/config/tensorzero.toml
+++ b/examples/guides/providers/nvidia_nim/config/tensorzero.toml
@@ -3,7 +3,8 @@ routing = ["nvidia_nim"]
 
 [models.llama_3_1_8b_instruct.providers.nvidia_nim]
 type = "nvidia_nim"
-model_name = "llama-3.1-8b-instruct"
+model_name = "meta/llama-3.1-8b-instruct"  # Note the "meta/" prefix
+api_key_location = "env::NVIDIA_API_KEY"   # Optional but explicit
 
 [functions.my_function_name]
 type = "chat"
