--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
 redundant_closure_for_method_calls = "deny"
+semicolon-if-nothing-returned = "deny"
 todo = "deny"
 trivially_copy_pass_by_ref = "deny"
 unimplemented = "deny"
