Add 'TENSORZERO_FORCE_CACHE_ON' env var and use it in ui server
We set this when running ui e2e tests (including when regenerating
fixtures) to force 'cache_options.enabled = true` for all inference
requests from the UI server (separate from 'evaluations' requests)

--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -230,6 +230,7 @@ jobs:
           echo "FIREWORKS_BASE_URL=http://mock-inference-provider:3030/fireworks/" >> fixtures/.env
           echo "OPENAI_BASE_URL=http://mock-inference-provider:3030/openai/" >> fixtures/.env
           echo "FIREWORKS_ACCOUNT_ID=fake_fireworks_account" >> fixtures/.env
+          echo "TENSORZERO_FORCE_CACHE_ON=1" >> fixtures/.env
 
           # Environment variables only used by the gateway container
           # We deliberately leave these unset when starting the UI container, to ensure
