--- a/examples/rag-retrieval-augmented-generation/simple-agentic-rag/config/tensorzero.toml
+++ b/examples/rag-retrieval-augmented-generation/simple-agentic-rag/config/tensorzero.toml
@@ -26,11 +26,21 @@ system_template = "functions/multi_hop_rag_agent/baseline/system_template.miniji
 [functions.multi_hop_rag_agent_openai_v1]
 type = "chat"
 system_schema = "functions/multi_hop_rag_agent/system_schema.json"
+user_schema = "functions/multi_hop_rag_agent/user_schema.json"
 
 [functions.multi_hop_rag_agent_openai_v1.variants.baseline]
 type = "chat_completion"
 model = "openai::gpt-4o-mini"
 system_template = "functions/multi_hop_rag_agent/baseline/system_template.minijinja"
+user_template = "functions/multi_hop_rag_agent/baseline/user_template.minijinja"
+weight = 1
+
+[functions.multi_hop_rag_agent_openai_v1.variants.o3]
+type = "chat_completion"
+model = "openai::o3-mini"
+system_template = "functions/multi_hop_rag_agent/baseline/system_template.minijinja"
+user_template = "functions/multi_hop_rag_agent/baseline/user_template.minijinja"
+weight = 0
 
 # ┌────────────────────────────────────────────────────────────────────────────┐
 # │                                   TOOLS                                    │
