[Issue-1961]: Handle clippy::ignored_unit_patterns (#2820)
* [Issue-1961]: Handle clippy::ignored_unit_patterns

* Fix linter error

* Fix merge from main

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
 if_not_else = "deny"
+ignored_unit_patterns = "deny"
 manual_string_new = "deny"
 match_bool = "deny"
 needless_raw_string_hashes = "deny"
