--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -477,7 +477,7 @@ jobs:
         if: matrix.replicated == true
         env:
           TENSORZERO_CLICKHOUSE_CLUSTER_NAME: "tensorzero_e2e_tests_cluster"
-        run: cargo test-e2e-no-creds
+        run: cargo test-e2e-no-creds -j 2
 
       - name: Print e2e logs
         if: always()
