[Issue-1961]: Handle clippy::explicit_iter_loop (#2813)
* [Issue-1961]: Handle clippy::explicit_iter_loop

* Remove cfg of e2e test field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
+explicit_iter_loop = "deny"
 if_not_else = "deny"
 ignored_unit_patterns = "deny"
 manual_string_new = "deny"
