--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ todo = "deny"
 trivially_copy_pass_by_ref = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
+unnecessary_wraps = "deny"
 unreachable = "deny"
 unused_self = "deny"
 unwrap_used = "deny"
