--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -152,7 +152,7 @@ jobs:
         run: docker exec fixtures-clickhouse-1 cat /var/log/clickhouse-server/clickhouse-server.log
 
       - name: Upload Playwright artifacts
-        if: steps.e2e_tests.outcome == 'failure' || steps.rust_e2e_tests.outcome == 'failure'
+        if: steps.e2e_tests.outcome == 'failure'
         uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
         with:
           name: playwright-report
@@ -162,5 +162,5 @@ jobs:
           retention-days: 7
 
       - name: Exit if tests failed
-        if: steps.e2e_tests.outcome == 'failure' || steps.rust_e2e_tests.outcome == 'failure'
+        if: steps.e2e_tests.outcome == 'failure'
         run: exit 1
