--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -161,6 +161,14 @@ jobs:
             ui/test-results/
           retention-days: 7
 
+      - name: Upload new model inference cache
+        if: always()
+        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
+        with:
+          name: model-inference-cache
+          path: |
+            ui/fixtures/model_inference_cache_e2e.jsonl
+
       - name: Exit if tests failed
         if: steps.e2e_tests.outcome == 'failure'
         run: exit 1
