--- a/tensorzero-core/tests/e2e/docker-compose.replicated.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.replicated.yml
@@ -111,7 +111,7 @@ services:
       clickhouse-01:
         condition: service_healthy
     entrypoint: /bin/bash
-    command: -c "gateway --run-migrations && gateway --default-config"
+    command: -c "gateway --run-migrations-only && gateway --default-config"
     extra_hosts:
       - "howdy.tensorzero.com:127.0.0.1"
     healthcheck:
