fixed bindings generation

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -45,4 +45,9 @@ run-e2e = "run --bin gateway --features e2e_tests -- --config-file tensorzero-co
 watch-e2e = "watch -x run-e2e"
 
 # Export Typescript bindings for TensorZero
-tsbuild = ["test", "export_bindings", "-p", "tensorzero-core"]
+tsbuild = [
+    "test",
+    "export_bindings",
+    "-p",
+    "tensorzero-core"
+]
