Source .env files in Playwright tests (#2655)
* Source .env files in Playwright tests

* Update ui/playwright.config.ts

---------

Co-authored-by: Gabriel Bianconi <GabrielBianconi@users.noreply.github.com>
Co-authored-by: Gabriel Bianconi <1275491+GabrielBianconi@users.noreply.github.com>

--- a/ui/package.json
+++ b/ui/package.json
@@ -62,6 +62,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "http-status-codes": "^2.3.0",
