--- a/examples/multimodal-vision-finetuning/config/tensorzero.toml
+++ b/examples/multimodal-vision-finetuning/config/tensorzero.toml
@@ -16,7 +16,7 @@ output_schema = "functions/classify_document/output_schema.json"
 
 [functions.classify_document.variants.baseline]
 type = "chat_completion"
-model = "openai::gpt-4o-mini"
+model = "openai::gpt-4o-2024-08-06"
 json_mode = "strict"
 retries = { num_retries = 2, max_delay_s = 10 }
 
