--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -5,9 +5,14 @@ license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "dotenv>=0.9.9",
     "httpx>=0.27.0",
+    "openai-agents>=0.2.3",
+    "pydantic>=2.11.3",
+    "toml>=0.10.2",
     "typing-extensions>=4.12.2",
     "uuid-utils>=0.9.0",
+    "wikipedia>=1.4.0",
 ]
 authors = [
     { name = "Viraj Mehta", email = "viraj@tensorzero.com" },
@@ -43,6 +48,9 @@ Documentation = "https://tensorzero.com/docs/"
 Repository = "https://github.com/tensorzero/tensorzero"
 Issues = "https://github.com/tensorzero/tensorzero/issues"
 ReleaseNotes = "https://github.com/tensorzero/tensorzero/releases"
+
+[project.scripts]
+tensorzero-gen = "tensorzero.cli:main"
 
 [build-system]
 requires = ["maturin>=1.8,<2.0"]
