--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -20,6 +20,7 @@ clap = { workspace = true }
 serde = { workspace = true }
 tracing-opentelemetry-instrumentation-sdk = { workspace = true }
 tower-http = { workspace = true }
+tokio-util = "0.7.15"
 
 [lints]
 workspace = true
