--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -175,8 +175,11 @@ jobs:
         run: exit 1
 
   # Test that the ui e2e tests pass with model inference cache included in this commit
-  # and no secrets set.
+  # and no model provider secrets set.
   ui-tests-e2e-existing-model-inference-cache:
     uses: ./.github/workflows/ui-tests-e2e-model-inference-cache.yml
     with:
       regen_cache: false
+    secrets:
+      S3_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      S3_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
