--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -12,6 +12,7 @@ debug = true
 template_filesystem_access.enabled = true
 export.otlp.traces.enabled = true
 unstable_error_json = true
+observability.skip_completed_migrations = true
 
 [object_storage]
 type = "disabled"
